1999-05-18  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* tests/test1.c (main): tests

	* camel/camel-mime-message.c (_write_to_file): 
	started write_to framework for mime_messages

	* camel/camel-mime-message.c (*_message_number): 
	message number funcs.
	
1999-05-15  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-mime-message.c (*_flag): 
	flags handling methods

1999-05-14  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-mime-message.c (camel_mime_message_class_init): 
	added recipient handling class funcs.

1999-05-13  bertrand  <Bertrand.Guiheneuf@inria.fr>
        
	* camel/camel-mime-message.c (camel_mime_message_init): 
	create recipients hash table
	(_remove_recipient): 
	(_add_recipient):
	(_get_recipients):  new funcs.
	Internal Recipients data structure is
	a bit complicated though.

	* camel/camel-mime-part.c (camel_mime_part_init): 
	create headers hash table

	* camel/camel-mime-message.h: 
	a bunch of get/set header field
	method done. Does nothing yet though.

	* camel/camel-mime-message.[ch] :
	new file. 

1999-05-12  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-mime-part.h (struct ): 
	disposition is now a full GMimeContentField
	object.

	* camel/gmime-content-field.c: new file
	handle "type/subtype ;parameter=value ; parameter=value ..."
	BNF grammar elements
	(gmime_content_field_write_to_file): new func
	
	* camel/gmime-utils.c (gmime_write_header_pair_to_file): 
	namespace change

1999-05-11  bertrand  <Bertrand.Guiheneuf@inria.fr>

	* camel/camel-mime-part.c (_write_to_file): 
	overload wrapper class method.
	(_write_to_file): start to write some text in 
	file.

	* camel/camel-store.c: typo fix.

	* camel/camel-store.c: 
	* camel/camel-service.c: 
	* camel/camel-folder.c: 
	* camel/camel-data-wrapper.c: 
	* camel/camel-mime-part.c: 
	static functions naming follows gnome 
	coding style guide.

	* camel/camel-mime-part.h: implemented public interfaces
	
